--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,15 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>uy.edu.ort.devops</groupId>
-	<artifactId>orders-service-example</artifactId>
+	<artifactId>obligatorio-be-orders</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>orders-service-example</name>
 	<description>Demo project for migrating Monolith to Microservices</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>devops-obligatorio-mv276756</sonar.organization>
+		<sonar.projectKey>DevOps-Obligatorio-MV276756_Obligatorio-BE-Orders</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
